--- a/app/src/main/res/layout/activity_fit_preview.xml
+++ b/app/src/main/res/layout/activity_fit_preview.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/FrameContainer_fit_preview"
+    android:background="#000000"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FitPreviewActivity">
+    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.example.virtualtrial.AutoFitFrameLayout
+        android:id="@+id/autofitFrameLayout_fit_preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.example.virtualtrial.AutoFitTextureView
+            android:id="@+id/autoFitTextureView_fit_preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <com.example.virtualtrial.DrawView
+            android:id="@+id/drawView_fit_preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/switchcam"
+            android:layout_width="wrap_content"
+            android:layout_height="65dp"
+            android:background="@android:drawable/ic_menu_camera" />
+
+    </com.example.virtualtrial.AutoFitFrameLayout>
+
+</FrameLayout>
