--- a/app/src/main/res/layout/activity_select_outfit.xml
+++ b/app/src/main/res/layout/activity_select_outfit.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/swipe"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
     android:padding="8dp"
@@ -15,4 +16,4 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-</LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
